--- a/Flip2Learn.Forms/Views/Cards/SprintCompletedCard.xaml
+++ b/Flip2Learn.Forms/Views/Cards/SprintCompletedCard.xaml
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <ContentView xmlns="http://xamarin.com/schemas/2014/forms" 
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
-             xmlns:ui="clr-namespace:XF.Material.Forms.UI;assembly=XF.Material" 
+             xmlns:ui="clr-namespace:XF.Material.Forms.UI;assembly=XF.Material"
+             xmlns:t="clr-namespace:Flip2Learn.Forms.Helpers"
              xmlns:views="clr-namespace:Flip2Learn.Forms.Views"
              x:Class="Flip2Learn.Forms.Views.SprintCompletedCard">
     
@@ -17,11 +18,11 @@
                         <StackLayout Orientation="Vertical" Margin="12,24">
 
                             <Label Text="✔️" HorizontalTextAlignment="Center" TextColor="Black" FontSize="24" HorizontalOptions="Center" />
-                            <Label Text="Spint completed" Style="{DynamicResource TitleBold}" Margin="0,12,0,16" LineHeight="1" HorizontalTextAlignment="Center" FontSize="18" HorizontalOptions="Center" />
+                            <Label Text="{t:Translate sprint_completed}" Style="{DynamicResource TitleBold}" Margin="0,12,0,16" LineHeight="1" HorizontalTextAlignment="Center" FontSize="18" HorizontalOptions="Center" />
 
                             <views:RippleView x:Name="newSprint" HorizontalOptions="Center" Padding="22,8" HasShadow="False" Elevation="0" BackgroundColor="{StaticResource GreenAccent}">
                                 <StackLayout Orientation="Horizontal">
-                                    <Label Text="New sprint" TextColor="Black" FontSize="16" HorizontalOptions="Center" Style="{DynamicResource Bold}"/>
+                                    <Label Text="{t:Translate sprint_new}" TextColor="Black" FontSize="16" HorizontalOptions="Center" Style="{DynamicResource Bold}"/>
                                 </StackLayout>
                             </views:RippleView>
 
