--- a/Flip2Learn.Forms.Android/Resources/layout/Toolbar.xml
+++ b/Flip2Learn.Forms.Android/Resources/layout/Toolbar.xml
@@ -5,6 +5,5 @@
 	android:layout_width="match_parent" 
 	android:layout_height="wrap_content" 
 	android:background="?attr/colorPrimary" 
-	android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" 
-	android:elevation="1dp"
-	android:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+	android:theme="@style/ToolBarStyle" 
+	android:elevation="1dp"/>
